--- a/projet5.css
+++ b/projet5.css
@@ -107,42 +107,7 @@ footer{
   height: 70px;
   padding-top: 50px;
   border-top: 10px solid beige;
-
-  
 }
-
- input[type=texte],textarea{
-  width: 50%;
-  padding: 12px;
-  border: 1pxsolide#ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
- }
- input[type=submit]{
-  background-color:palevioletred;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-
- }
- input[type=submit]:hover{
-  background-color:blanchedalmond;
-  text-align: center;
- }
- .container{
-  border-radius: 5px;
-  background-color:beige;
-  padding: 20px;
-  text-align: center;
- 
-  
- }
- 
  
  .image1{
   margin-left:-60px;
@@ -157,4 +122,67 @@ footer{
 footer p{
   margin-top: 40px;
   color:white;
+}
+
+
+.p2{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+}
+
+  .ajouter form input {
+    display: inline-block;
+    width: 100%;
+    padding: 14px 130px 14px 15px;
+    border: 2px solid palevioletred;
+    outline: none;
+    border-radius: 30px;
+    align-items: center;
+    margin-bottom: 5%;
+    margin-top: 2%;
+
+}
+.ajouter form textarea {
+  display: inline-block;
+  width: 100%;
+  padding: 14px 130px 14px 15px;
+  border: 2px solid palevioletred;
+  outline: none;
+  align-items: center;
+  margin-bottom: 5%;
+  margin-top: 2%;
+}
+button {
+  background-color: palevioletred;
+  color: white;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 13px 30px;
+  border-radius: 30px;
+  transition: .4s;
+}
+.adress{
+  margin-right: 100px;
+  background-color:beige;
+
+}
+h3{
+  margin-left: 80px;
+  color: palevioletred;
+}
+.p1{
+  background-color: beige;
+}
+#table{
+ position: fixed; 
+ width: 100%;
+ top:0px;
+}
+
+
+.about-title{
+  margin-top: 70px;
 }
